--- a/EAD_ProjetoDS/BLL_EAD_ProjetoDS/BLL_EAD_ProjetoDS.csproj
+++ b/EAD_ProjetoDS/BLL_EAD_ProjetoDS/BLL_EAD_ProjetoDS.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{13F59B62-7327-4BD2-9ADA-413335ED0968}</ProjectGuid>
+    <ProjectGuid>{1BA00D1C-2CA1-4426-ADB3-51051840670D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BLL_EAD_ProjetoDS</RootNamespace>
     <AssemblyName>BLL_EAD_ProjetoDS</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
@@ -41,16 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BLL_Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL_EAD_ProjetoDS\DAL_EAD_ProjetoDS.csproj">
-      <Project>{5d4eb0c6-5bc6-4b78-bc38-1e1f983a1b60}</Project>
+      <Project>{c9c29b54-d8e5-41c8-a2af-f1e542f5db2c}</Project>
       <Name>DAL_EAD_ProjetoDS</Name>
     </ProjectReference>
     <ProjectReference Include="..\DTO_EAD_ProjetoDS\DTO_EAD_ProjetoDS.csproj">
-      <Project>{faf8c1ea-804a-43aa-a653-e9e4e975c902}</Project>
+      <Project>{6bb88c12-e5ee-42cc-bd22-7508625d6370}</Project>
       <Name>DTO_EAD_ProjetoDS</Name>
     </ProjectReference>
   </ItemGroup>
