--- a/EAD_ProjetoDS/DAL_EAD_ProjetoDS/DAL_EAD_ProjetoDS.csproj
+++ b/EAD_ProjetoDS/DAL_EAD_ProjetoDS/DAL_EAD_ProjetoDS.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conexao.cs" />
     <Compile Include="DAL_Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
